# platform.core.security.security-config

./: CMakeLists.txt  project.config
config/: 90_user-content-permissions.post  91_user-dbspace-permissions.post  group_id_setting  set_capability
config/service_list/emulator/mobile/: admin_service_daemon_list  service_daemon_list
config/service_list/emulator/wearable/: admin_service_daemon_list  service_daemon_list
labeling/: set_label
packaging/: security-config.spec
smack/: onlycap  smack_default_labeling
systemd/: CMakeLists.txt  security-config.service
test/: CMakeLists.txt  install.sh
test/aslr_test/: CMakeLists.txt  README  test-aslr.sh
test/aslr_test/scripts/: 01_make_input.sh  02_sort_input.sh  03_run_test.sh  _sh_util_lib  exception.list  run_aslr_test.sh
test/aslr_test/util_target_32/: file
test/capability_test/: CMakeLists.txt  cap_mac_exception_list  check_capability.sh  check_capability_mac.sh  root_daemon_list
test/capability_test/list/emul/mobile/: cap_mac_exception_list  cap_mac_exception_list.stable  root_daemon_list  root_daemon_list.stable
test/capability_test/list/emul/wearable/: cap_mac_exception_list  cap_mac_exception_list.stable  root_daemon_list  root_daemon_list.stable
test/dep_test/: CMakeLists.txt  README  test-dep.sh
test/dep_test/scripts/: 01_run_dep_test.sh  _sh_util_lib  exception.list  run_dep_test.sh
test/dep_test/util_target_64/: file  readelf
test/path_check_test/: CMakeLists.txt  path_check.sh  path_exception.list  path_exception.list.stable
test/root_test/: CMakeLists.txt  exception_list  exist_service.sh  non_daemon_list  non_root_list  root_daemon_list  root_minimization.sh
test/root_test/list/emul/mobile/: exception_list  exception_list.stable  non_daemon_list  non_daemon_list.stable  non_root_list  non_root_list.stable  root_daemon_list  root_daemon_list.stable
test/root_test/list/emul/wearable/: exception_list  exception_list.stable  non_daemon_list  non_daemon_list.stable  non_root_list  non_root_list.stable  root_daemon_list  root_daemon_list.stable
test/security_mount_option_test/: CMakeLists.txt  security_mount_option_test.sh
test/setuid_test/: CMakeLists.txt  README  test-setuid.sh
test/setuid_test/scripts/: 01_run_setuid_test.sh  _sh_util_lib  exception.list  exception.list.stable
test/smack_basic_test/: CMakeLists.txt  smack_basic_test.sh
test/smack_rule_test/: CMakeLists.txt  checksmacklabel.sh  checksmackrule_loaded.sh  checksmackrule_saved.sh  smacklabel_exception.list  smacklabel_exception.list.stable  smackrule_exception.list  smackrule_exception.list.stable  smackrule_exception_saved.list  smackrule_exception_saved.list.stable
test/utils/: CMakeLists.txt  _sh_util_lib
test/utils/arm/: readelf.arm
test/utils/i386/: file.i386  readelf.i386
test/utils/x86_64/: file.x86_64  readelf
