ADD_SUBDIRECTORY(utils)
#ADD_SUBDIRECTORY(aslr_test)    #This test is not included in image.
#ADD_SUBDIRECTORY(dep_test)     #This test is not included in image.
ADD_SUBDIRECTORY(setuid_test)
ADD_SUBDIRECTORY(path_check_test)
ADD_SUBDIRECTORY(capability_test)
ADD_SUBDIRECTORY(smack_rule_test)
ADD_SUBDIRECTORY(root_test)
ADD_SUBDIRECTORY(security_mount_option_test)
ADD_SUBDIRECTORY(smack_basic_test)
